# Flappy-Bird-SDL2

./: CMakeLists.txt  LICENSE  README.md
src/entity/: Pipe.cpp  Pipe.h  Player.cpp  Player.h
src/input/: MainInput.cpp  input.h  keyboardInput.cpp
src/main/: app.h  init.cpp  main.cpp  main.h
src/render/: render.cpp  render.h
